--- a/dedicated-destinations/Maldives/start.html
+++ b/dedicated-destinations/Maldives/start.html
@@ -30,7 +30,8 @@
     --->
     <div class="nav-container">
         <nav class="newNav">
-            <a href="#" class="nav__logo" data-aos="fade-right" style="text-decoration: none;">Tourguide<span>.</span></a>
+            <a href="#" class="nav__logo" data-aos="fade-right"
+                style="text-decoration: none;">Tourguide<span>.</span></a>
 
             <ul class="navLinks">
                 <li class="link home" data-aos="fade-down"><a href="../../index.html#Home">Home</a></li>
@@ -43,7 +44,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -67,7 +69,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
-                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad, shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
+                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad,
+                    shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
             </div>
 
             <div class="features">
@@ -97,8 +100,10 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8159200.551217124!2d67.92461983577321!3d3.09874015988776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x24b599bfaafb7bbd%3A0x414509e181956289!2sMaldives!5e0!3m2!1sen!2sin!4v1708024601107!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8159200.551217124!2d67.92461983577321!3d3.09874015988776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x24b599bfaafb7bbd%3A0x414509e181956289!2sMaldives!5e0!3m2!1sen!2sin!4v1708024601107!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <!-- Menu Container -->
@@ -117,11 +122,19 @@
 
                     <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
 
-                        <p class="w3-text-grey">The Maldives is an island country in the Indian Ocean known for its white sand beaches, turquoise waters, coral reefs, and tropical climate. Tourism is the country's largest economic industry, with over 1.5 million tourists visiting
-                            annually.<br><br> The Maldives is considered one of the world's top destinations for recreational diving, and its marine geography offers opportunities for water sports, undersea accommodations, restaurants, and spas. The Maldives
-                            has two distinct seasons: a wet season from May to October and a dry season from November to April.
-                            <br><br> The dry season is ideal for water sports, sunbathing, and shopping, while the wet season brings tropical storms and heavy rainfall. The Maldives' tourism industry is characterized by one island per resort, which provides
-                            more privacy and luxury for visitors. The country has over 130 resort islands with high-end hotel brands.
+                        <p class="w3-text-grey">The Maldives is an island country in the Indian Ocean known for its
+                            white sand beaches, turquoise waters, coral reefs, and tropical climate. Tourism is the
+                            country's largest economic industry, with over 1.5 million tourists visiting
+                            annually.<br><br> The Maldives is considered one of the world's top destinations for
+                            recreational diving, and its marine geography offers opportunities for water sports,
+                            undersea accommodations, restaurants, and spas. The Maldives
+                            has two distinct seasons: a wet season from May to October and a dry season from November to
+                            April.
+                            <br><br> The dry season is ideal for water sports, sunbathing, and shopping, while the wet
+                            season brings tropical storms and heavy rainfall. The Maldives' tourism industry is
+                            characterized by one island per resort, which provides
+                            more privacy and luxury for visitors. The country has over 130 resort islands with high-end
+                            hotel brands.
 
                     </div>
 
@@ -213,7 +226,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -236,11 +252,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
