--- a/dedicated-destinations/London/start.html
+++ b/dedicated-destinations/London/start.html
@@ -30,7 +30,8 @@
     --->
     <div class="nav-container">
         <nav class="newNav">
-            <a href="#" class="nav__logo" data-aos="fade-right" style="text-decoration: none;">Tourguide<span>.</span></a>
+            <a href="#" class="nav__logo" data-aos="fade-right"
+                style="text-decoration: none;">Tourguide<span>.</span></a>
 
             <ul class="navLinks">
                 <li class="link home" data-aos="fade-down"><a href="../../index.html">Home</a></li>
@@ -43,7 +44,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -67,7 +69,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
-                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad, shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
+                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad,
+                    shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
             </div>
 
             <div class="features">
@@ -97,8 +100,10 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158858.5851905659!2d-0.26640390830596417!3d51.52852620270334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sin!4v1706387057216!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158858.5851905659!2d-0.26640390830596417!3d51.52852620270334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sin!4v1706387057216!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
 
@@ -119,14 +124,23 @@
                     <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
 
                         <p class="w3-text-grey">
-                            <p>London is a vibrant and diverse experience that combines rich history, cultural attractions, modern amenities, and a lively atmosphere. As one of the world's most popular tourist destinations, London offers a wide array of
-                                activities and sights to explore. Historical landmarks such as the Tower of London, Buckingham Palace, and Westminster Abbey draw millions of visitors each year, offering glimpses into the city's royal heritage and centuries-old
-                                traditions. The iconic Big Ben clock tower and the majestic London Eye are also must-see landmarks that provide stunning views of the cityscape.
+                        <p>London is a vibrant and diverse experience that combines rich history, cultural attractions,
+                            modern amenities, and a lively atmosphere. As one of the world's most popular tourist
+                            destinations, London offers a wide array of
+                            activities and sights to explore. Historical landmarks such as the Tower of London,
+                            Buckingham Palace, and Westminster Abbey draw millions of visitors each year, offering
+                            glimpses into the city's royal heritage and centuries-old
+                            traditions. The iconic Big Ben clock tower and the majestic London Eye are also must-see
+                            landmarks that provide stunning views of the cityscape.
 
-                                <br> <br>Cultural enthusiasts can immerse themselves in London's world-class museums and galleries, including the British Museum, the Tate Modern, and the National Gallery, which house extensive collections of art and artifacts
-                                from around the globe. The West End theater district offers a diverse range of theatrical productions, from classic plays to cutting-edge performances, while music lovers can enjoy concerts and events at venues like the
-                                Royal Albert Hall and the O2 Arena.
-                            </p>
+                            <br> <br>Cultural enthusiasts can immerse themselves in London's world-class museums and
+                            galleries, including the British Museum, the Tate Modern, and the National Gallery, which
+                            house extensive collections of art and artifacts
+                            from around the globe. The West End theater district offers a diverse range of theatrical
+                            productions, from classic plays to cutting-edge performances, while music lovers can enjoy
+                            concerts and events at venues like the
+                            Royal Albert Hall and the O2 Arena.
+                        </p>
                     </div>
 
                     <div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
@@ -220,7 +234,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -243,11 +260,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
