--- a/dedicated-destinations/new-york/start.html
+++ b/dedicated-destinations/new-york/start.html
@@ -30,7 +30,8 @@
     --->
     <div class="nav-container">
         <nav class="newNav">
-            <a href="#" class="nav__logo" data-aos="fade-right" style="text-decoration: none;">Tourguide<span>.</span></a>
+            <a href="#" class="nav__logo" data-aos="fade-right"
+                style="text-decoration: none;">Tourguide<span>.</span></a>
 
             <ul class="navLinks">
                 <li class="link home" data-aos="fade-down"><a href="../../index.html#Home">Home</a></li>
@@ -43,7 +44,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -67,7 +69,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
-                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad, shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
+                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad,
+                    shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
             </div>
 
             <div class="features">
@@ -97,8 +100,10 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387194.06217238074!2d-74.30932166836448!3d40.697019303516804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sin!4v1706388080306!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387194.06217238074!2d-74.30932166836448!3d40.697019303516804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sin!4v1706388080306!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <!-- Menu Container -->
             <div class="w3-container" id="menu">
@@ -116,13 +121,23 @@
 
                     <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
 
-                        <p class="w3-text-grey">New York, often dubbed "The Empire State" or "The Big Apple," is a global hub of tourism, offering an unparalleled blend of cultural diversity, iconic landmarks, and vibrant energy. From the bustling streets of Manhattan to the
-                            serene landscapes of the Hudson Valley, New York State caters to a diverse range of interests and preferences, ensuring that every visitor finds something captivating.<br><br> In New York City, tourists are greeted by the towering
-                            skyscrapers of Midtown Manhattan, including the iconic Empire State Building, Times Square, and Rockefeller Center. The city's cultural landscape is equally impressive, with world-renowned museums like the Metropolitan Museum
+                        <p class="w3-text-grey">New York, often dubbed "The Empire State" or "The Big Apple," is a
+                            global hub of tourism, offering an unparalleled blend of cultural diversity, iconic
+                            landmarks, and vibrant energy. From the bustling streets of Manhattan to the
+                            serene landscapes of the Hudson Valley, New York State caters to a diverse range of
+                            interests and preferences, ensuring that every visitor finds something captivating.<br><br>
+                            In New York City, tourists are greeted by the towering
+                            skyscrapers of Midtown Manhattan, including the iconic Empire State Building, Times Square,
+                            and Rockefeller Center. The city's cultural landscape is equally impressive, with
+                            world-renowned museums like the Metropolitan Museum
                             of Art, the Museum of Modern Art (MoMA), and the American Museum of Natural History.
 
-                            <br><br> Broadway theaters draw theater enthusiasts from around the globe, showcasing the latest in musicals, plays, and performances. Central Park provides a picturesque oasis amidst the urban jungle, offering opportunities
-                            for leisurely strolls, boat rides, and outdoor concerts.<br><br> Beyond Manhattan, New York State boasts an array of attractions. In Brooklyn, visitors can explore diverse neighborhoods like Williamsburg and DUMBO, known for
+                            <br><br> Broadway theaters draw theater enthusiasts from around the globe, showcasing the
+                            latest in musicals, plays, and performances. Central Park provides a picturesque oasis
+                            amidst the urban jungle, offering opportunities
+                            for leisurely strolls, boat rides, and outdoor concerts.<br><br> Beyond Manhattan, New York
+                            State boasts an array of attractions. In Brooklyn, visitors can explore diverse
+                            neighborhoods like Williamsburg and DUMBO, known for
                             their artistic flair and culinary delights.
                         </p>
                     </div>
@@ -212,7 +227,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -235,11 +253,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
