--- a/dedicated-destinations/machu-picchu-peru/Machu_start.html
+++ b/dedicated-destinations/machu-picchu-peru/Machu_start.html
@@ -30,7 +30,8 @@
     --->
     <div class="nav-container">
         <nav class="newNav">
-            <a href="#" class="nav__logo" data-aos="fade-right" style="text-decoration: none;">Tourguide<span>.</span></a>
+            <a href="#" class="nav__logo" data-aos="fade-right"
+                style="text-decoration: none;">Tourguide<span>.</span></a>
 
             <ul class="navLinks">
                 <li class="link home" data-aos="fade-down"><a href="../../index.html">Home</a></li>
@@ -43,7 +44,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -67,7 +69,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
-                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad, shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included.</p>
+                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad,
+                    shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included.</p>
             </div>
 
             <div class="features">
@@ -98,8 +101,10 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3884.9873295191783!2d-72.54783702467718!3d-13.163198787170069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x916d9a5f89555555%3A0x3a10370ea4a01a27!2sHistoric%20Sanctuary%20of%20Machu%20Picchu!5e0!3m2!1sen!2sin!4v1706192135166!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3884.9873295191783!2d-72.54783702467718!3d-13.163198787170069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x916d9a5f89555555%3A0x3a10370ea4a01a27!2sHistoric%20Sanctuary%20of%20Machu%20Picchu!5e0!3m2!1sen!2sin!4v1706192135166!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
 
@@ -119,10 +124,17 @@
 
                     <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
 
-                        <p class="w3-text-grey">Machu Picchu has temples, residences, platforms, and roads, and most of these are included in the tourist route with a guide. <br><br> Some places, like the Intipunku and Inca Bridge, require optional routes to enter, while others,
-                            like the Temple of the Moon, require a different ticket. The most popular way to get to Machu Picchu is by hiking the 4-day Inca Trail, which takes hikers through the Andes, past lesser-known Inca sites, and ends at the Sun
-                            Gate. There's also a 2-day Inca Trail for those who want a shorter or less challenging hike. <br><br>The trail includes steep stone staircases and narrow paths, and hikers feel a sense of accomplishment when they reach the
-                            Sun Gate. </p>
+                        <p class="w3-text-grey">Machu Picchu has temples, residences, platforms, and roads, and most of
+                            these are included in the tourist route with a guide. <br><br> Some places, like the
+                            Intipunku and Inca Bridge, require optional routes to enter, while others,
+                            like the Temple of the Moon, require a different ticket. The most popular way to get to
+                            Machu Picchu is by hiking the 4-day Inca Trail, which takes hikers through the Andes, past
+                            lesser-known Inca sites, and ends at the Sun
+                            Gate. There's also a 2-day Inca Trail for those who want a shorter or less challenging hike.
+                            <br><br>The trail includes steep stone staircases and narrow paths, and hikers feel a sense
+                            of accomplishment when they reach the
+                            Sun Gate.
+                        </p>
                     </div>
 
                     <div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
@@ -210,7 +222,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -233,11 +248,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
