--- a/dedicated-destinations/santorini-aegean-sea/start.html
+++ b/dedicated-destinations/santorini-aegean-sea/start.html
@@ -30,7 +30,8 @@
     --->
     <div class="nav-container">
         <nav class="newNav">
-            <a href="#" class="nav__logo" data-aos="fade-right" style="text-decoration: none;">Tourguide<span>.</span></a>
+            <a href="#" class="nav__logo" data-aos="fade-right"
+                style="text-decoration: none;">Tourguide<span>.</span></a>
 
             <ul class="navLinks">
                 <li class="link home" data-aos="fade-down"><a href="../../index.html#Home">Home</a></li>
@@ -43,7 +44,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -67,7 +69,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
-                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad, shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
+                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad,
+                    shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
             </div>
 
             <div class="features">
@@ -97,8 +100,10 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d102754.73743472747!2d25.338229986202133!3d36.407125546217046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1499ce86adfd9ff7%3A0xb2a761f740d68afc!2sSantorini!5e0!3m2!1sen!2sin!4v1706095325984!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d102754.73743472747!2d25.338229986202133!3d36.407125546217046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1499ce86adfd9ff7%3A0xb2a761f740d68afc!2sSantorini!5e0!3m2!1sen!2sin!4v1706095325984!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <!-- Menu Container -->
@@ -117,12 +122,22 @@
 
                     <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
 
-                        <p class="w3-text-grey">Santorini, nestled in the heart of the Aegean Sea, is a captivating Greek island renowned for its stunning landscapes, rich history, and unique architectural charm. Formed by a volcanic caldera, this crescent-shaped island boasts
-                            a dramatic topography characterized by sheer cliffs, white-washed buildings, and crystal-clear azure waters.<br><br> The island's iconic architecture is a visual delight, with traditional Cycladic structures featuring cubic
-                            houses adorned with blue-domed roofs that perfectly complement the vibrant hues of the sea and sky. <br>
-                            <br> These structures cascade down the cliffs, creating a breathtaking panorama that is synonymous with the postcard-perfect image of Santorini.<br><br> The island's main towns, Fira and Oia, are perched on the cliffs and offer
-                            panoramic views of the expansive caldera and the neighboring islands. Fira, the bustling capital, is a vibrant hub with narrow cobblestone streets, charming shops, and lively cafes. Oia, renowned for its magical sunsets, presents
-                            a quieter, more romantic ambiance, with its narrow alleyways, upscale boutiques, and art galleries.
+                        <p class="w3-text-grey">Santorini, nestled in the heart of the Aegean Sea, is a captivating
+                            Greek island renowned for its stunning landscapes, rich history, and unique architectural
+                            charm. Formed by a volcanic caldera, this crescent-shaped island boasts
+                            a dramatic topography characterized by sheer cliffs, white-washed buildings, and
+                            crystal-clear azure waters.<br><br> The island's iconic architecture is a visual delight,
+                            with traditional Cycladic structures featuring cubic
+                            houses adorned with blue-domed roofs that perfectly complement the vibrant hues of the sea
+                            and sky. <br>
+                            <br> These structures cascade down the cliffs, creating a breathtaking panorama that is
+                            synonymous with the postcard-perfect image of Santorini.<br><br> The island's main towns,
+                            Fira and Oia, are perched on the cliffs and offer
+                            panoramic views of the expansive caldera and the neighboring islands. Fira, the bustling
+                            capital, is a vibrant hub with narrow cobblestone streets, charming shops, and lively cafes.
+                            Oia, renowned for its magical sunsets, presents
+                            a quieter, more romantic ambiance, with its narrow alleyways, upscale boutiques, and art
+                            galleries.
                         </p>
                     </div>
                     <div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
@@ -211,7 +226,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -234,11 +252,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
